Add client/angular.json 1743609902055

--- a/client/angular.json
+++ b/client/angular.json
@@ -15,7 +15,7 @@
           "options": {
             "outputPath": "dist",
             "index": "src/index.html",
-            "main": "src/main.ts",
+        "main": "src/app/app-new.component.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.json",
             "assets": ["src/favicon.ico", "src/assets"],
