--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "@angular/common": "^19.2.4",
+    "@angular/core": "^19.2.4",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.8",
     "colors": "^1.4.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
@@ -9,6 +12,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
+    "ng2-charts": "^8.0.0",
     "nodemailer": "^6.10.0",
     "stripe": "^17.7.0"
   }
